[gd_scene load_steps=4 format=3 uid="uid://xkdlpkmnadcx"]

[ext_resource type="Script" path="res://addons/levelcreator/Scripts/LevelCreatorDock.gd" id="1_jj1ps"]
[ext_resource type="PackedScene" uid="uid://cd20v5he2qbj2" path="res://addons/levelcreator/Scenes/GridButton.tscn" id="1_rrjpi"]
[ext_resource type="PackedScene" uid="uid://cghuogdsll3vr" path="res://addons/levelcreator/Scenes/Brushbutton.tscn" id="2_vgcad"]

[node name="LevelCreatorDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jj1ps")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NewButton" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "NEW"

[node name="SaveButton" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "SAVE"

[node name="LoadButton" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "LOAD"

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "LevelName"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "res://LevelContent/Easy/default"
max_length = 50

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = ".tres"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "BRUSH
"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2

[node name="BrushButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource("2_vgcad")]
layout_mode = 2
disabled = true

[node name="BrushButton2" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource("2_vgcad")]
layout_mode = 2
text = "1"
Index = 1

[node name="BrushButton3" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource("2_vgcad")]
layout_mode = 2
text = "2"
Index = 2

[node name="BrushButton4" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource("2_vgcad")]
layout_mode = 2
text = "3"
Index = 3

[node name="BrushButton5" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource("2_vgcad")]
layout_mode = 2
text = "4"
Index = 4

[node name="BrushButton6" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource("2_vgcad")]
layout_mode = 2
text = "5"
Index = 5

[node name="BrushButton7" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource("2_vgcad")]
layout_mode = 2
text = "R"
Index = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Music: "

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "BG: "

[node name="BgRef" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Choose"

[node name="Tiles" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Tiles"]
layout_mode = 2

[node name="Button" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button2" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button3" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button4" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button5" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button6" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Tiles"]
layout_mode = 2

[node name="Button" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer2" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button2" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer2" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button3" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer2" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button4" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer2" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button5" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer2" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button6" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer2" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Tiles"]
layout_mode = 2

[node name="Button" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer3" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button2" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer3" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button3" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer3" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button4" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer3" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button5" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer3" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button6" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer3" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Tiles"]
layout_mode = 2

[node name="Button" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer4" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button2" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer4" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button3" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer4" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button4" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer4" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button5" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer4" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button6" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer4" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Tiles"]
layout_mode = 2

[node name="Button" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer5" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button2" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer5" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button3" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer5" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button4" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer5" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button5" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer5" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button6" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer5" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Tiles"]
layout_mode = 2

[node name="Button" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer6" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button2" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer6" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button3" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer6" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button4" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer6" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button5" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer6" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="Button6" parent="HBoxContainer/VBoxContainer2/Tiles/HBoxContainer6" instance=ExtResource("1_rrjpi")]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(800, 800)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "LevelContent"

[node name="FileDialogueBG" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "Prefab/BG"

[connection signal="button_up" from="HBoxContainer/VBoxContainer/NewButton" to="." method="_on_new_button_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer2/HBoxContainer2/Button" to="." method="_on_button_button_up"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_file_dialog_confirmed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="FileDialogueBG" to="." method="_on_file_dialogue_bg_file_selected"]
